--- a/adm/style/board_notices_settings.html
+++ b/adm/style/board_notices_settings.html
@@ -57,6 +57,7 @@
 	</fieldset>
 
 	<fieldset class="submit-buttons">
+		<label></label>
 		<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
 		{{ S_FORM_TOKEN }}
 	</fieldset>
