Fix issue with "empty()" in php 5.4 + fix Sonar bug

--- a/adm/style/board_notices_settings.html
+++ b/adm/style/board_notices_settings.html
@@ -57,7 +57,7 @@
 	</fieldset>
 
 	<fieldset class="submit-buttons">
-		<label></label>
+		<legend></legend>
 		<input class="button1" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
 		{{ S_FORM_TOKEN }}
 	</fieldset>
