Add column scope in html table headers

--- a/adm/style/board_notices.html
+++ b/adm/style/board_notices.html
@@ -22,13 +22,13 @@
 <table class="table1 zebra-table">
 	<thead>
 		<tr>
-			<th>{{ lang('BOARD_NOTICE_TITLE') }}</th>
-			<th></th>
-			<th>{{ lang('BOARD_NOTICE_RULES') }}</th>
-			<th>{{ lang('COLUMN_CAN_DISMISS') }}</th>
-			<th>{{ lang('ACTIVE') }}</th>
-			<th></th>
-			<th>{{ lang('OPTIONS') }}</th>
+			<th scope="col">{{ lang('BOARD_NOTICE_TITLE') }}</th>
+			<th scope="col"></th>
+			<th scope="col">{{ lang('BOARD_NOTICE_RULES') }}</th>
+			<th scope="col">{{ lang('COLUMN_CAN_DISMISS') }}</th>
+			<th scope="col">{{ lang('ACTIVE') }}</th>
+			<th scope="col"></th>
+			<th scope="col">{{ lang('OPTIONS') }}</th>
 		</tr>
 	</thead>
 	<tbody>
