--- a/adm/style/board_notices_edit.html
+++ b/adm/style/board_notices_edit.html
@@ -110,10 +110,10 @@
 	<table class="table1 zebra-table">
 	<thead>
 	<tr>
-		<th>{{ lang('BOARD_NOTICE_RULE_ACTIVE') }}</th>
-		<th>{{ lang('BOARD_NOTICE_RULE_NAME') }}</th>
-		<th>{{ lang('BOARD_NOTICE_RULE_VALUE') }}</th>
-		<th>{{ lang('BOARD_NOTICE_RULE_VARIABLES') }}</th>
+		<th scope="col">{{ lang('BOARD_NOTICE_RULE_ACTIVE') }}</th>
+		<th scope="col">{{ lang('BOARD_NOTICE_RULE_NAME') }}</th>
+		<th scope="col">{{ lang('BOARD_NOTICE_RULE_VALUE') }}</th>
+		<th scope="col">{{ lang('BOARD_NOTICE_RULE_VARIABLES') }}</th>
 	</tr>
 	</thead>
 	<tbody>
