Add caption on tables

--- a/adm/style/board_notices.html
+++ b/adm/style/board_notices.html
@@ -20,9 +20,10 @@
 <legend>{{ lang('BOARD_NOTICE_TITLE') }}</legend>
 
 <table class="table1 zebra-table">
+	<caption>{{ lang('BOARD_NOTICE_TITLE') }}</caption>
 	<thead>
 		<tr>
-			<th scope="col">{{ lang('BOARD_NOTICE_TITLE') }}</th>
+			<th scope="col">{{ lang('BOARD_NOTICE_NAME') }}</th>
 			<th scope="col"></th>
 			<th scope="col">{{ lang('BOARD_NOTICE_RULES') }}</th>
 			<th scope="col">{{ lang('COLUMN_CAN_DISMISS') }}</th>
