--- a/adm/style/board_notices_edit.html
+++ b/adm/style/board_notices_edit.html
@@ -103,11 +103,13 @@
 		</dl>
 	</fieldset>
 
+	<br />
 	<h1>{{ lang('ACP_BOARD_NOTICE_RULES') }}</h1>
 
 	<p>{{ lang('ACP_BOARD_NOTICE_RULES_EXPLAIN') }}</p>
 
 	<table class="table1 zebra-table">
+	<caption>{{ lang('BOARD_NOTICE_RULES_CAPTION') }}</caption>
 	<thead>
 	<tr>
 		<th scope="col">{{ lang('BOARD_NOTICE_RULE_ACTIVE') }}</th>
